...

function LanguageToggle() {
  const { language, setLanguage } = useSelectedLanguage();

  return (
    <Toggle
      testID="language-button"
      accessibilityLabel={`Switch to ${nextLanguage(language)}`}
      label={language === 'pt-BR' ? 'PT' : 'EN'}
      onPress={() => setLanguage(nextLanguage(language))}
    />
  );
}
...
