appId: ${APP_ID}
---
- launchApp
- runFlow:
    when:
      visible: Sign In
    file: ../utils/login.yaml
- assertVisible: Home
- assertVisible:
    id: style-guide-tab
- tapOn:
    id: style-guide-tab
- assertVisible: Typography
- tapOn:
    id: settings-tab
- assertVisible: Settings
- scroll
- assertVisible: Logout
